# mma-savant

./: .env.example  .env.sample  .gitignore  DockerFile_serve  Dockerfile_api  Makefile  README.md  TODO_REFAC.md  docker-compose.prod.yml  docker-compose.yml  env.sample.txt  test_openrouter.py  test_openrouter_2.py
.serena/: project.yml
build_script/: check_env.sh  check_ports.sh
crawlers/: crawler_event_detail.py  crawler_events.py  crawler_fighters.py  entrypoint.sh  init_weight_classes.py  init_weight_classes.sql  main.py  pyproject.toml  requirements.txt  test.py  ufc_stats_flow.py
docs/: API_INTERFACE.md  CLAUDE.md  CODE_ANALYSIS_REPORT.md  DASHBOARD_ANIMATION_GUIDE.md  DASHBOARD_IMPROVEMENTS.md  DASHBOARD_STATS.md  DASHBOARD_STATS_ADD.md  DASHBOARD_UI_FIXES.md  DATA_FLOW.md  DESIGN_SYSTEM.md  DSL.md  FIGHTER_DETAIL_SPEC.md  LANGGRAPH_MIGRATION_PLAN.md  MULTI_AGENT_ARCHITECTURE.md  MULTI_AGENT_IMPLEMENTATION_GUIDE.md  SPEC.md  TODO.md  TODO_API.md  TODO_UI.md  dashboard-prototype-E.html  dashboard-review.md  fighter-detail-preview.html  multi_agent_architecture_guide.md
frontend/: .npmrc  Dockerfile  package.json  (+2 more)
src/: config.py  init_tables.py  main.py  main_api.py  pyproject.toml  requirements.txt  schema.json  test_chat.py  test_mcp_server.py
src/api/: main.py
src/api/admin/: routes.py
src/api/auth/: dependencies.py  jwt_handler.py  routes.py
src/api/chat/: routes.py
src/api/dashboard/: routes.py
src/api/event/: routes.py
src/api/fighter/: routes.py
src/api/user/: routes.py
src/api/websocket/: __init__.py  manager.py  routes.py
src/common/: base_model.py  enums.py  logging_config.py  models.py  utils.py  ws_types.py
src/composition/: dto.py  event_composer.py  exceptions.py  fighter_composer.py  match_composer.py  repositories.py
src/conversation/: message_manager.py  models.py  repositories.py  services.py
src/dashboard/: dto.py  exceptions.py  repositories.py  services.py
src/data_collector/: crawler.py  main.py  run_ufc_stats_flow.py
src/data_collector/scrapers/: __init__.py  event_detail_scraper.py  events_scraper.py  fighters_scraper.py  match_detail_scraper.py  ranking_scraper.py
src/data_collector/scrapers/test-by-html/: test_match_detail.py
src/data_collector/scripts/: geocode_events.py  scrape_nationality.py
src/data_collector/workflows/: data_store.py  tasks.py  ufc_stats_flow.py
src/data_collector/workflows/tests/: test_ufc_stats_flow.py
src/database/: __init__.py  init_tables.py  session.py
src/database/connection/: postgres_conn.py  postgres_conn_test.py  redis_conn.py  test_postgres_conn.py
src/domain/: event.py  fighter.py  match.py
src/domain/common/: base_entity.py  ranking.py  weightclass.py
src/domain/event/: event.py
src/domain/fighter/: fighter.py
src/event/: dto.py  exceptions.py  models.py  repositories.py  services.py
src/exceptions/: base_exception.py  event_exception.py  fighter_exception.py  match_exception.py
src/fighter/: dto.py  exceptions.py  models.py  repositories.py  services.py
src/fighter/test/: test_model_transformers.py
src/llm/: __init__.py  agent_manager.py  agent_manager_v2.py  agent_manager_v3.py  chart_loader.py  client.py  exceptions.py  langchain_service.py  langchain_service_v2.py  langchain_service_v3.py  model_factory.py  performance_monitor.py  prompts.py  service.py  services.py  stream_processor.py  supported_charts.json
src/llm/callbacks/: __init__.py  anthropic_callback.py  huggingface_callback.py  openrouter_callback.py
src/llm/graph/: __init__.py  graph_builder.py  graph_builder_private.py  graph_builder_subgraph.py  prompts.py  react_agent.py  schemas.py  state.py  state_private.py  state_subgraph.py
src/llm/graph/nodes/: __init__.py  context_enricher.py  conversation_manager.py  critic.py  direct_response.py  fighter_comparison.py  intent_classifier.py  mma_analysis.py  result_analyzer.py  sql_agent.py  supervisor.py  text_response.py  visualize.py
src/llm/prompts/: agent_prompt_templates.py  en_ver.py  kr_ver.py  two_phase_prompts.py
src/llm/providers/: __init__.py  anthropic_provider.py  huggingface_provider.py  openrouter_provider.py
src/llm/tools/: __init__.py  sql_tool.py
src/match/: dto.py  exceptions.py  models.py  repositories.py  services.py
src/models/: __init__.py  base.py  conversation_model.py  event_model.py  fighter_model.py  match_model.py  user_model.py  weight_class_model.py
src/repository/: conversion_repo.py  event_repo.py  fighter_repo.py  match_repo.py  user_repo.py
src/services/: event_services.py  fighter_services.py  match_services.py
src/tests/: conftest.py  test_agent_manager_v3_openrouter.py  test_langchain_service_v3.py  test_message_manager.py
src/tests/api/websocket/: test_websocket_manager.py  test_websocket_routes.py
src/tests/common/: test_ws_types.py
src/tests/composer/: __init__.py  test_event_composer.py  test_fighter_composer.py  test_match_composer.py
src/tests/conversation/: test_conversation_repositories.py  test_conversation_services.py
src/tests/dashboard/: test_dashboard_repositories.py  test_dashboard_services.py
src/tests/event/: test_event_repositories.py  test_event_services.py  test_repositories.py
src/tests/fighter/: test_fighter_detail.py  test_fighter_model.py  test_fighter_repositories.py  test_fighter_services.py  test_model.py  test_repositories.py
src/tests/llm/: eval_conversation_manager.py  eval_e2e.py  test_chart_loader.py  test_graph_nodes.py  test_stream_processor.py
src/tests/match/: test_match_models.py  test_match_repositories.py  test_match_services.py  test_repositories.py  test_services.py
src/tests/user/: __init__.py  test_admin_creation.py  test_user_repositories.py  test_user_services.py
src/tools/: base.py  common.py  composition_tools.py  database_tools.py  event_tools.py  fighter_tools.py  load_tools.py  main.py  match_tools.py  mcp_server.py
src/usecase/: fighter_statics.py  get_pucnh_acc_by_result.py  retrieve_event.py  retrieve_fighter.py  retrieve_match.py
src/user/: dto.py  exceptions.py  models.py  repositories.py  services.py
(+237 files in other folders)
