[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aiosignal==1.3.2",
    "aiosqlite==0.21.0",
    "alembic==1.15.1",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "apprise==1.9.2",
    "asgi-lifespan==2.1.0",
    "asyncpg==0.30.0",
    "attrs==25.1.0",
    "beautifulsoup4==4.12.2",
    "brotli==1.1.0",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "chainlit==0.1.0",
    "chardet==5.2.0",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "coolname==2.2.0",
    "crawl4ai==0.6.3",
    "cryptography==44.0.2",
    "cssselect==1.3.0",
    "dateparser==1.2.1",
    "deprecated==1.2.18",
    "distro==1.9.0",
    "docker==7.1.0",
    "exceptiongroup==1.2.2",
    "fake-http-header==0.3.5",
    "fake-useragent==2.2.0",
    "fastapi==0.115.11",
    "fastmcp>=2.2.0",
    "filelock==3.18.0",
    "frozenlist==1.7.0",
    "fsspec==2025.3.0",
    "graphviz==0.20.3",
    "greenlet==3.2.3",
    "griffe==1.6.0",
    "h11==0.14.0",
    "h2==4.2.0",
    "hf-xet==1.1.5",
    "hpack==4.1.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "huggingface-hub==0.33.1",
    "humanize==4.12.1",
    "hyperframe==6.1.0",
    "idna==3.10",
    "importlib-metadata==8.5.0",
    "jinja2==3.1.6",
    "jinja2-humanize-extension==0.4.0",
    "jiter==0.8.2",
    "joblib==1.5.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "langchain-anthropic>=0.3.17",
    "langchain-mcp-adapters>=0.1.7",
    "langgraph>=0.5.1",
    "litellm==1.73.2",
    "lxml==5.4.0",
    "m3u8==6.0.0",
    "mako==1.3.9",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "multidict==6.6.0",
    "nltk==3.9.1",
    "numpy==2.2.3",
    "oauthlib==3.2.2",
    "openai==1.93.0",
    "opentelemetry-api==1.30.0",
    "orjson==3.10.15",
    "packaging==24.2",
    "pandas==2.2.3",
    "pathspec==0.12.1",
    "pendulum==3.0.0",
    "pillow==10.4.0",
    "pip==25.1.1",
    "playwright==1.53.0",
    "prefect==3.4.0",
    "prometheus-client==0.21.1",
    "propcache==0.3.2",
    "psutil==7.0.0",
    "psycopg2-binary==2.9.10",
    "pycparser==2.22",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydantic-extra-types==2.10.2",
    "pydantic-settings==2.8.1",
    "pyee==13.0.0",
    "pygments==2.19.1",
    "pyopenssl==25.1.0",
    "pyperclip==1.9.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-slugify==8.0.4",
    "python-socks==2.7.1",
    "pytz==2025.1",
    "pyyaml==6.0.2",
    "rank-bm25==0.2.2",
    "readchar==4.2.1",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "rfc3339-validator==0.1.4",
    "rich==13.9.4",
    "rpds-py==0.23.1",
    "ruamel-yaml==0.18.10",
    "ruamel-yaml-clib==0.2.12",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "snowballstemmer==2.2.0",
    "soupsieve==2.6",
    "sqlalchemy==2.0.38",
    "starlette==0.46.1",
    "text-unidecode==1.3",
    "tf-playwright-stealth==1.2.0",
    "tiktoken==0.9.0",
    "time-machine==2.16.0",
    "tokenizers==0.21.2",
    "toml==0.10.2",
    "tqdm==4.67.1",
    "typer==0.15.2",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "tzlocal==5.3.1",
    "ujson==5.10.0",
    "unidecode>=1.4.0",
    "urllib3==2.3.0",
    "user-agent==0.1.10",
    "uv==0.6.5",
    "uvicorn==0.34.0",
    "websockets==15.0.1",
    "wrapt==1.17.2",
    "xxhash==3.5.0",
    "yarl==1.20.1",
    "zipp==3.21.0",
]

[tool.pytest.ini_options]
testpaths = ["./"]
asyncio_mode = "auto"
norecursedirs = ["data_collector/scrapers/test-by-html", "workflows/tests/"]
filterwarnings = [
    "ignore::DeprecationWarning:fake_http_header.*",
    "ignore::DeprecationWarning:importlib.resources.*",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20"
]
