[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aiosignal==1.3.2",
    "aiosqlite==0.21.0",
    "alembic==1.15.1",
    "annotated-types==0.7.0",
    "anthropic==0.57.1",
    "anyio==4.8.0",
    "apprise==1.9.2",
    "asgi-lifespan==2.1.0",
    "asyncer==0.0.8",
    "asyncpg==0.30.0",
    "attrs==25.1.0",
    "backoff==2.2.1",
    "bcrypt==4.2.0",
    "beautifulsoup4==4.12.2",
    "bidict==0.23.1",
    "brotli==1.1.0",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "chainlit==0.1.0",
    "chardet==5.2.0",
    "charset-normalizer==3.4.1",
    "chevron==0.14.0",
    "click==8.1.8",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "coolname==2.2.0",
    "crawl4ai==0.6.3",
    "cryptography==44.0.2",
    "cssselect==1.3.0",
    "dataclasses-json==0.6.7",
    "dateparser==1.2.1",
    "deprecated==1.2.18",
    "distro==1.9.0",
    "docker==7.1.0",
    "dotenv==0.9.9",
    "exceptiongroup==1.2.2",
    "fake-http-header==0.3.5",
    "fake-useragent==2.2.0",
    "fastapi==0.115.11",
    "fastmcp==2.2.0",
    "filelock==3.18.0",
    "filetype==1.2.0",
    "frozenlist==1.7.0",
    "fsspec==2025.3.0",
    "googleapis-common-protos==1.70.0",
    "graphviz==0.20.3",
    "greenlet==3.2.3",
    "griffe==1.6.0",
    "grpcio==1.73.1",
    "h11==0.14.0",
    "h2==4.2.0",
    "hf-xet==1.1.5",
    "hpack==4.1.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    "huggingface-hub==0.33.1",
    "humanize==4.12.1",
    "hyperframe==6.1.0",
    "idna==3.10",
    "importlib-metadata==8.5.0",
    "inflection==0.5.1",
    "iniconfig==2.1.0",
    "jinja2==3.1.6",
    "jinja2-humanize-extension==0.4.0",
    "jiter==0.8.2",
    "joblib==1.5.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "langchain==0.3.26",
    "langchain-anthropic==0.3.17",
    "langchain-core==0.3.68",
    "langchain-huggingface>=0.3.0",
    "langchain-mcp-adapters==0.1.7",
    "langchain-openai==0.3.28",
    "langchain-text-splitters==0.3.8",
    "langgraph==0.5.1",
    "langgraph-checkpoint==2.1.0",
    "langgraph-prebuilt==0.5.2",
    "langgraph-sdk==0.1.72",
    "langsmith==0.4.4",
    "lazify==0.4.0",
    "litellm==1.73.2",
    "literalai==0.1.201",
    "lxml==5.4.0",
    "m3u8==6.0.0",
    "mako==1.3.9",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "mcp==1.10.1",
    "mdurl==0.1.2",
    "monotonic==1.6",
    "multidict==6.6.0",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "nltk==3.9.1",
    "numpy==2.2.3",
    "oauthlib==3.2.2",
    "openai==1.93.0",
    "openapi-pydantic==0.5.1",
    "opentelemetry-api==1.34.1",
    "opentelemetry-exporter-otlp==1.34.1",
    "opentelemetry-exporter-otlp-proto-common==1.34.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.34.1",
    "opentelemetry-exporter-otlp-proto-http==1.34.1",
    "opentelemetry-instrumentation==0.55b1",
    "opentelemetry-instrumentation-alephalpha==0.42.0",
    "opentelemetry-instrumentation-anthropic==0.42.0",
    "opentelemetry-instrumentation-bedrock==0.42.0",
    "opentelemetry-instrumentation-chromadb==0.42.0",
    "opentelemetry-instrumentation-cohere==0.42.0",
    "opentelemetry-instrumentation-crewai==0.42.0",
    "opentelemetry-instrumentation-google-generativeai==0.42.0",
    "opentelemetry-instrumentation-groq==0.42.0",
    "opentelemetry-instrumentation-haystack==0.42.0",
    "opentelemetry-instrumentation-lancedb==0.42.0",
    "opentelemetry-instrumentation-langchain==0.42.0",
    "opentelemetry-instrumentation-llamaindex==0.42.0",
    "opentelemetry-instrumentation-logging==0.55b1",
    "opentelemetry-instrumentation-marqo==0.42.0",
    "opentelemetry-instrumentation-mcp==0.42.0",
    "opentelemetry-instrumentation-milvus==0.42.0",
    "opentelemetry-instrumentation-mistralai==0.42.0",
    "opentelemetry-instrumentation-ollama==0.42.0",
    "opentelemetry-instrumentation-openai==0.42.0",
    "opentelemetry-instrumentation-openai-agents==0.42.0",
    "opentelemetry-instrumentation-pinecone==0.42.0",
    "opentelemetry-instrumentation-qdrant==0.42.0",
    "opentelemetry-instrumentation-redis==0.55b1",
    "opentelemetry-instrumentation-replicate==0.42.0",
    "opentelemetry-instrumentation-requests==0.55b1",
    "opentelemetry-instrumentation-sagemaker==0.42.0",
    "opentelemetry-instrumentation-sqlalchemy==0.55b1",
    "opentelemetry-instrumentation-threading==0.55b1",
    "opentelemetry-instrumentation-together==0.42.0",
    "opentelemetry-instrumentation-transformers==0.42.0",
    "opentelemetry-instrumentation-urllib3==0.55b1",
    "opentelemetry-instrumentation-vertexai==0.42.0",
    "opentelemetry-instrumentation-watsonx==0.42.0",
    "opentelemetry-instrumentation-weaviate==0.42.0",
    "opentelemetry-proto==1.34.1",
    "opentelemetry-sdk==1.34.1",
    "opentelemetry-semantic-conventions==0.55b1",
    "opentelemetry-semantic-conventions-ai==0.4.11",
    "opentelemetry-util-http==0.55b1",
    "orjson==3.10.15",
    "ormsgpack==1.10.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "pathspec==0.12.1",
    "pendulum==3.0.0",
    "pillow==10.4.0",
    "pip==25.1.1",
    "playwright==1.53.0",
    "pluggy==1.6.0",
    "posthog==3.25.0",
    "prefect==3.4.0",
    "prometheus-client==0.21.1",
    "propcache==0.3.2",
    "protobuf==5.29.5",
    "psutil==7.0.0",
    "psycopg2-binary==2.9.10",
    "pycparser==2.22",
    "pydantic[email]==2.10.6",
    "pydantic-core==2.27.2",
    "pydantic-extra-types==2.10.2",
    "pydantic-settings==2.8.1",
    "pyee==13.0.0",
    "pygments==2.19.1",
    "pyjwt==2.10.1",
    "pyopenssl==25.1.0",
    "pyperclip==1.9.0",
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-engineio==4.12.2",
    "python-multipart==0.0.20",
    "python-slugify==8.0.4",
    "python-socketio==5.13.0",
    "python-socks==2.7.1",
    "pytz==2025.1",
    "pyyaml==6.0.2",
    "rank-bm25==0.2.2",
    "readchar==4.2.1",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rfc3339-validator==0.1.4",
    "rich==13.9.4",
    "rpds-py==0.23.1",
    "ruamel-yaml==0.18.10",
    "ruamel-yaml-clib==0.2.12",
    "shellingham==1.5.4",
    "simple-websocket==1.1.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "snowballstemmer==2.2.0",
    "soupsieve==2.6",
    "sqlalchemy==2.0.38",
    "sse-starlette==2.3.6",
    "starlette==0.46.1",
    "superclaude>=4.0.9",
    "syncer==2.0.3",
    "tenacity==9.1.2",
    "text-unidecode==1.3",
    "tf-playwright-stealth==1.2.0",
    "tiktoken==0.9.0",
    "time-machine==2.16.0",
    "tokenizers==0.21.2",
    "toml==0.10.2",
    "tomli==2.2.1",
    "tqdm==4.67.1",
    "traceloop-sdk==0.42.0",
    "typer==0.15.2",
    "typing-extensions==4.12.2",
    "typing-inspect==0.9.0",
    "tzdata==2025.1",
    "tzlocal==5.3.1",
    "ujson==5.10.0",
    "unidecode==1.4.0",
    "urllib3==2.3.0",
    "user-agent==0.1.10",
    "uv==0.6.5",
    "uvicorn==0.34.0",
    "watchfiles==0.20.0",
    "websockets==15.0.1",
    "wrapt==1.17.2",
    "wsproto==1.2.0",
    "xxhash==3.5.0",
    "yarl==1.20.1",
    "zipp==3.21.0",
    "zstandard==0.23.0",
    "redis>=7.1.1",
]

[tool.pytest.ini_options]
testpaths = ["./"]
pythonpath = ["."]
asyncio_mode = "auto"
norecursedirs = ["data_collector/scrapers/test-by-html", "workflows/tests/"]
filterwarnings = [
    "ignore::DeprecationWarning:fake_http_header.*",
    "ignore::DeprecationWarning:importlib.resources.*",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20"
]

[tool.uv]
# 현재 디렉토리를 Python 경로에 추가
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["."]
